# MBGen

./: post-startup.sh  pyproject.toml
config/CID/ijcai/: main.yaml
config/CID/retail/: main.yaml
config/SID/ijcai/: main.yaml
config/SID/retail/: main.yaml
trainer/: Trainer.py  evaluation.py
